--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@ body {
     h1 {
         color: white;
         font-family: Poppins;
-        font-size: 50px;
+        /* font-size: 50px; */
+        font-size: 10vw;
         font-style: normal;
         font-weight: 700;
         line-height: 111.3%; /* 53.424px */
@@ -17,7 +18,7 @@ body {
     h2 {
         color: white;
         font-family: Poppins;
-        font-size: 40px;
+        font-size: 4.5vw;
         font-style: normal;
         font-weight: 700;
         line-height: 111.3%; /* 44.52px */
@@ -30,11 +31,21 @@ body {
     h3 {
         color: white;
         font-family: Poppins;
-        font-size: 28px;
+        font-size: 2.8vw;
         font-style: normal;
         font-weight: 700;
         line-height: 111.3%; /* 31.164px */
         letter-spacing: 17.64px;
+        text-transform: uppercase;
+
+        margin: 0;
+    }
+
+    h4 {
+        color: white;
+        font-family: Poppins;
+        font-size: 2vw;
+        font-weight: 700;
         text-transform: uppercase;
 
         margin: 0;
@@ -49,6 +60,35 @@ body {
     }
 }
 
+.nav {
+    display: flex;
+    justify-content: space-between;
+
+    padding: 10px 20px;
+
+    border-radius: 30px;
+    border: 1px solid rgba(255, 255, 255, 0.58);
+    background: rgba(255, 255, 255, 0.06);
+    backdrop-filter: blur(4.199999809265137px);
+
+    a {
+        color: #fff;
+        font-family: Poppins;
+        font-size: 2.5vw;
+        font-weight: 700;
+        text-decoration: none;
+        text-transform: uppercase;
+
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        &:hover {
+        }
+    }
+    
+}
+
 .mars {
     margin: 20px;
 
@@ -56,7 +96,7 @@ body {
         text-align: center;
         padding: 20px 120px;
         width: fit-content;
-        margin: 20px auto;
+        margin: 20px auto 100px auto;
 
         /* background: rgba(255, 255, 255, 0.06); */
         /* backdrop-filter: blur(4.199999809265137px);
@@ -75,12 +115,13 @@ body {
     
     .img-holder.mars {
         /* width: 100vw; */
-        height: 800px;
-        margin-bottom: 80px;
+        height: 80vh;
+        margin: 0 0 80px 0;
+        padding: 30vh 0 0 0;
         position: relative;
 
         background-image: url("./images/mars.jpg");
-        /* background-position: center; */
+        background-position: center top;
         background-size: cover;
         background-repeat: no-repeat;
         box-shadow: 0px -27px 55px 25px #000 inset;
@@ -90,11 +131,11 @@ body {
         justify-content: center;
         align-items: flex-end;
 
-        .size-wrapper, distance-wrapper {
+        .appear-wrapper {
             width: fit-content;
         }
 
-        .size, .distance {
+        .appear {
             width: 350px;
             padding: 40px 20px;
             display: block;
@@ -124,17 +165,41 @@ body {
         margin-bottom: 60px;
     } 
 
-    .composition {
-        display: flex;
-        justify-content: space-between;
-        gap: 40px;
+    .comp {
+        margin-bottom: 80px;
 
-        padding: 0 60px;
-        
-        .filler {
-            flex: 0 1 50%;
+        .composition {
+            display: flex;
+            justify-content: space-between;
+            gap: 40px;
+    
+            padding: 0 60px;
+            
+            .filler {
+                flex: 0 1 50%;
+            }
+    
         }
+    }
 
+    .geo {
+        margin-bottom: 80px;
+
+        .geological {
+            display: flex;
+            justify-content: space-between;
+            align-items: stretch;
+            gap: 40px;
+
+            & > .glass-box {
+                flex: 0 1 33%;
+
+                .ph {
+                    font-size: 2vw;
+                    color: #fff;
+                }
+            }
+        }
     }
 }
 
