--- a/styles.css
+++ b/styles.css
@@ -51,13 +51,25 @@ body {
         margin: 0;
     }
 
-    p {
+    h6 {
+        color: white;
+        font-family: Poppins;
+        font-size: 24px;
+        font-weight: 700;
+        text-transform: uppercase;
+
+        margin: 0 0 5px 0;
+    }
+
+    p, li {
         color: white;
         font-family: Poppins;
         font-size: 20px;
 
-        margin: 0;
+        margin: 0 0 5px 0;
     }
+
+
 }
 
 .nav {
@@ -136,7 +148,7 @@ body {
         }
 
         .appear {
-            width: 350px;
+            width: 30vw;
             padding: 40px 20px;
             display: block;
     
@@ -147,10 +159,10 @@ body {
                 opacity: 1;
             }
 
-            h3 {
+            h3, h4 {
                 text-align: center;
-                margin-bottom: 10px;;
-                
+                margin-bottom: 10px;
+                letter-spacing: 17.64px;
             }
 
             p {
@@ -183,6 +195,7 @@ body {
     }
 
     .geo {
+        padding: 120px 20px;
         margin-bottom: 80px;
 
         .geological {
@@ -198,7 +211,24 @@ body {
                     font-size: 2vw;
                     color: #fff;
                 }
+
+                .horizontal {
+                    display: flex;
+                    align-items: center;
+                    /* justify-content: center; */
+                    gap: 15px;
+                }
             }
+        }
+    }
+
+    .summary-text {
+        padding: 30px 60px;
+        text-align: center;
+        
+        p {
+            color: #d25001;
+            font-size: 1.7em;
         }
     }
 }
@@ -212,15 +242,36 @@ body {
 .glass-box {
     padding: 60px 40px;
     margin-bottom: 40px;
+    position: relative;
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
     gap: 20px;
 
-    border-radius: 30px;
+    /* border-radius: 30px;
     border: 1px solid rgba(255, 255, 255, 0.58);
-    background: rgba(255, 255, 255, 0.06);
-    backdrop-filter: blur(4.199999809265137px);
+    background: rgba(255, 255, 255, 0.06); */
+    z-index: 2;
+    & > * {
+        z-index: 2;
+        position: relative;
+    }
+
+     &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width : 100%;
+        height: 100%;
+
+        border-radius: 30px;
+        background: rgba(255, 255, 255, 0.06);
+        border: 1px solid rgba(255, 255, 255, 0.58);
+        backdrop-filter: blur(4.199999809265137px);
+
+        z-index: 1;
+     }
 }
