--- a/styles.css
+++ b/styles.css
@@ -1,75 +1,101 @@
 body {
     background-color: black;
+    /* margin: 0; */
+}
 
-    h1 {
-        color: white;
-        font-family: Poppins;
-        /* font-size: 50px; */
-        font-size: 10vw;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 111.3%; /* 53.424px */
-        letter-spacing: 30.24px;
-        text-transform: uppercase;
+h1 {
+    color: white;
+    font-family: Poppins;
+    /* font-size: 50px; */
+    font-size: 10vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 111.3%; /* 53.424px */
+    letter-spacing: 30.24px;
+    text-transform: uppercase;
 
-        margin: 0;
+    text-align: center;
+    margin: 0 0 60px 0;
+}
+
+h2 {
+    color: white;
+    font-family: Poppins;
+    font-size: 4.5vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 111.3%; /* 44.52px */
+    letter-spacing: 25.2px;
+    text-transform: uppercase;
+
+    text-align: center;
+    margin: 0 0 60px 0;
+}
+
+h3 {
+    color: white;
+    font-family: Poppins;
+    font-size: 2.8vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 111.3%; /* 31.164px */
+    letter-spacing: 17.64px;
+    text-transform: uppercase;
+
+    margin: 0;
+}
+
+h4 {
+    color: white;
+    font-family: Poppins;
+    font-size: 2vw;
+    font-weight: 700;
+    text-transform: uppercase;
+
+    margin: 0;
+}
+
+h6 {
+    color: white;
+    font-family: Poppins;
+    font-size: 24px;
+    font-weight: 700;
+    text-transform: uppercase;
+
+    margin: 0 0 5px 0;
+}
+
+p, li, a {
+    color: white;
+    font-family: Poppins;
+    font-size: 20px;
+    text-decoration: none;
+
+    margin: 0 0 5px 0;
+}
+
+i {
+    color: white;
+    /* font-size: 24px; */
+}
+
+footer {
+    margin-top: 30px;
+
+    .footer {
+        display: flex;
+        justify-content: space-between;
+    
+        max-width: 60%;
+        margin: auto;
+        padding: 20px 0;
     }
 
-    h2 {
-        color: white;
-        font-family: Poppins;
-        font-size: 4.5vw;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 111.3%; /* 44.52px */
-        letter-spacing: 25.2px;
-        text-transform: uppercase;
-
-        margin: 0;
+    .line {
+        height: 2px;
+        background-color: white;
+        margin: 0 20px;
     }
-
-    h3 {
-        color: white;
-        font-family: Poppins;
-        font-size: 2.8vw;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 111.3%; /* 31.164px */
-        letter-spacing: 17.64px;
-        text-transform: uppercase;
-
-        margin: 0;
-    }
-
-    h4 {
-        color: white;
-        font-family: Poppins;
-        font-size: 2vw;
-        font-weight: 700;
-        text-transform: uppercase;
-
-        margin: 0;
-    }
-
-    h6 {
-        color: white;
-        font-family: Poppins;
-        font-size: 24px;
-        font-weight: 700;
-        text-transform: uppercase;
-
-        margin: 0 0 5px 0;
-    }
-
-    p, li {
-        color: white;
-        font-family: Poppins;
-        font-size: 20px;
-
-        margin: 0 0 5px 0;
-    }
-
-
 }
 
 .nav {
@@ -274,4 +300,49 @@ body {
 
         z-index: 1;
      }
+}
+
+.galaxy-header {
+    margin: 10px;
+
+    
+
+    .galaxy {
+        background-image: url("./images/MilklyWay.jpg");
+        background-repeat: no-repeat;  
+        background-size: cover;
+        background-position: center;
+
+        /* box-shadow: 0px -27px 55px 25px #000; */
+
+        height: 100vh;
+        border-radius: 20px;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+
+.formation-solar-system {
+    margin: 20px;
+
+    .formation {
+        display: flex;
+        justify-content: space-between;
+        /* gap: 20px; */
+    
+        .glass-box {
+            flex: 0 0 23%;
+            margin: 0;
+        }
+    
+        i {
+            flex: 0 0 32px;
+            /* flex: 0 0 10%; */
+            display: flex;
+            align-items: center;
+            font-size: 4vw;
+        }
+    }
 }
